--- a/index.htm
+++ b/index.htm
@@ -34,28 +34,34 @@
     </header>
     <!----MAIN-->
     <main class="main-content">
-        <section class="services">
-            <h3 class="section-title">Services</h3>
+        <section class="services box">
+            <h3 class="section-title decoration">Services</h3>
             <p class="section-content">We offer ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
             <ul class="services-items">
                 <li class="services-item">
-                    <img src="img/fa-font.gif" alt="Letter A" class="services-img">
+                    <div class="img-decoration img-decoration_active">
+                        <img src="img/fa-font.gif" alt="Letter A" class="services-img img_active">
+                    </div>
                     <h4 class="services-title">Clean Typography</h4>
                     <p class="services-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
                 </li>
                 <li class="services-item">
-                    <img src="img/fa-code.gif" alt="Code pictogram" class="services-img">
+                    <div class="img-decoration">
+                        <img src="img/fa-code.gif" alt="Code pictogram" class="services-img">
+                    </div>
                     <h4 class="services-title">Rock Solid Code</h4>
                     <p class="services-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
                 </li>
                 <li class="services-item">
-                    <img src="img/fa-support.gif" alt="Support pictogram" class="services-img">
+                    <div class="img-decoration">
+                        <img src="img/fa-support.gif" alt="Support pictogram" class="services-img">
+                    </div>
                     <h4 class="services-title">Expert Support</h4>
                     <p class="services-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
                 </li>
             </ul>
         </section>
-        <section class="about">
+        <section class="about box">
             <h3 class="section-title">About us</h3>
             <p class="section-content">We offer ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
             <div class="about-text-box">
@@ -87,7 +93,7 @@
                 </ul>
             </div>
         </section>
-        <section class="works">
+        <section class="works box">
             <h3 class="section-title">Latest Works</h3>
             <ul class="works-links">
                 <li class="works-link"><a href="#0">All</a></li>
