--- a/index.htm
+++ b/index.htm
@@ -254,26 +254,27 @@
             </div>
             <div class="contact-us__content">
                 <div class="contacts">
-                    <div class="adress-card">
-                        <h6 class="adress-title">Address</h6>
-                        <adress class="adress-text">
-                            312, 7th Ave, New York NY 101200, United States of America
-                        </adress>
+                    <div class="address-card">
+                        
+                        <h6 class="address-title address">Address</h6>
+                        <address class="address-text">
+                            312, 7th Ave, New York <span class="address-decoration">NY 101200, United States of America</span>
+                        </address>
                     </div>
                     
-                    <div class="adress-card">
-                        <h6 class="adress-title">Hotline (24x7)</h6>
-                        <adress class="adress-text">
-                            <a href="tel:+650052300">+65 0052 300</a><a href="tel:+6588251210">+65 88251 210</a><a href="tel:+8801723511340">+88 01723 511 340</a>
-                        </adress>
+                    <div class="address-card">
+                        <h6 class="address-title phone">Hotline (24x7)</h6>
+                        <address class="address-text">
+                            <a class="address-link" href="tel:+650052300">+65 0052 300</a><a class="address-link" href="tel:+6588251210">+65 88251 210</a><a class="address-link" href="tel:+8801723511340">+88 01723 511 340</a>
+                        </address>
                     </div>
 
-                    <div class="adress-card">
-                        <h6 class="adress-title">E-mail</h6>
-                        <adress class="adress-text">
-                            <a href="mailto:shapedtheme@gmail.com">shapedtheme@gmail.com</a>
-                            <a href="mailto:khalilkode@gmail.com">khalilkode@gmail.com</a>
-                        </adress>
+                    <div class="address-card">
+                        <h6 class="address-title email">E-mail</h6>
+                        <adress class="address-text">
+                            <a class="address-link" href="mailto:shapedtheme@gmail.com">shapedtheme@gmail.com</a>
+                            <a class="address-link" href="mailto:khalilkode@gmail.com">khalilkode@gmail.com</a>
+                        </address>
                     </div>
                 </div>
 
